<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blank.game_suit.fragments.GameStart">

    <ImageView
        android:id="@+id/closeGame"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/playerOneWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerImage">

        <TextView
            android:id="@+id/tvTitlePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#2196F3"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgRock"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/Batu"
            android:padding="4dp"
            android:tag="imgRock"
            app:srcCompat="@drawable/batu" />

        <ImageView
            android:id="@+id/imgPaper"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/Kertas"
            android:padding="4dp"
            android:tag="imgPaper"
            app:srcCompat="@drawable/kertas" />

        <ImageView
            android:id="@+id/imgScissor"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/Gunting"
            android:padding="4dp"
            android:tag="imgScissor"
            app:srcCompat="@drawable/gunting" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvVersus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="24dp"
        android:rotation="-15"
        android:text="@string/versus"
        android:textColor="#FF0000"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/playerOneWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playerComWrapper" />

    <LinearLayout
        android:id="@+id/playerComWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerImage">

        <TextView
            android:id="@+id/tvTitleOpponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="#2196F3"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgComRock"
            android:tag="imgComRock"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/batur"
            android:padding="4dp"
            app:srcCompat="@drawable/batu" />

        <ImageView
            android:id="@+id/imgComPaper"
            android:tag="imgComPaper"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/kertasr"
            android:padding="4dp"
            app:srcCompat="@drawable/kertas" />

        <ImageView
            android:id="@+id/imgComScissor"
            android:tag="imgComScissor"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/guntingr"
            android:padding="4dp"
            app:srcCompat="@drawable/gunting" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgRefresh"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/refresh"
        android:tag="imgRefresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/refresh" />


</androidx.constraintlayout.widget.ConstraintLayout>